--- a/htmlcss/기초/css/09_layout2.css
+++ b/htmlcss/기초/css/09_layout2.css
@@ -52,3 +52,10 @@ body {
   top: -40px;
   box-sizing: border-box;
 }
+
+input[type='text'] {
+  padding: 10px;
+  font-size: 20px;
+  border: 2px solid black;
+  border-radius: 5px;
+}
