--- a/htmlcss/중급/css/01_index.css
+++ b/htmlcss/중급/css/01_index.css
@@ -6,6 +6,16 @@ body {
   margin: 0px;
 }
 
+i {
+  background-color: burlywood;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  padding-top: 25px;
+  box-sizing: border-box;
+  color: white;
+}
+
 .nav_container {
   display: flex;
   height: 40px;
@@ -69,4 +79,25 @@ input[type='text'] {
   font-size: 20px;
   border: 2px solid black;
   border-radius: 5px;
+}
+
+.box2 {
+  margin-top: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+div {
+  width: 300px;
+  height: 200px;
+  text-align: center;
+}
+
+@media screen and (max-width:992px) {
+  .wrap {
+    display: flex;
+    justify-content:baseline;
+    flex-wrap: wrap;
+  }
 }
