--- a/htmlcss/중급/css/01_index.css
+++ b/htmlcss/중급/css/01_index.css
@@ -88,6 +88,55 @@ input[type='text'] {
   justify-content: space-around;
 }
 
+.shop-bg {
+  margin: auto;
+  width: 80%;
+  background-color: #eee;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.shop-container {
+  width: 90%;
+  height: 100%;
+  margin: auto;
+  display: flex;
+
+}
+
+.shop-item {
+  width: 33%;
+  height: 100%;
+  padding: 10px;
+  position: relative;
+}
+
+.shop-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.overlay-wrap {
+  position : absolute;
+  width : 100%;
+  height : 100%;
+  overflow : hidden
+}
+
+.overlay-black {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  margin-top: 100%;
+  transition: all 1s;
+}
+
+.overlay-wrap:hover .overlay-black {
+  margin-top : 50%;
+}
+
 div {
   width: 300px;
   height: 200px;
