--- a/react/shop/src/App.css
+++ b/react/shop/src/App.css
@@ -3,3 +3,11 @@
   background-size: cover;
   background-position: center;
 }
+
+.start {
+  opacity : 0
+}
+.end {
+  opacity : 1;
+  transition: all 0.5s;
+}
