--- a/firebase/public/main.css
+++ b/firebase/public/main.css
@@ -26,3 +26,10 @@
 .container {
   margin-top: 100px;
 }
+
+.detail-pic {
+  width: 100%;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+} 
